docs/7.57/md/abenst_tt_write.md
---
title: "Syntax"
description: |
  <tt:write var='variable' map='...' lengthminLength='len' xsd-type... /> Effect The statement tt:write enables the writing of the value of a variable(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_variable.htm) or parameter(https://help.sap.com/doc
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_write.htm"
abapFile: "abenst_tt_write.htm"
keywords: ["insert", "do", "if", "data", "abenst", "write"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml.htm) →  [XML - Transformations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml_trafos.htm) →  [Simple Transformations (ST)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_st.htm) →  [ST - Serialization and Deserialization](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_serial_deserial.htm) →  [ST - Reading and Writing Variables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_variable_transformations.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ST - tt:write, Write Variables, ABENST_TT_WRITE, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D
%0A%0D%0ASuggestion for improvement:)

ST - tt:write, Write Variables

Syntax

<tt:write var="variable" *\[*map="..."*\]*
                         *\[*length*|*minLength="len"*\]*
                         *\[*xsd-type...*\]* />

Effect

The statement tt:write enables the writing of the value of a [variable](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_variable.htm) or [parameter](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_parameter.htm) to the target XML data.

variable is used to specify the variable to be written or to specify a parameter. The same applies to the attributes map, length, and minLength and to xsd-type... as to the statement [tt:value](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_value_elementary.htm). The variable must represent an elementary value.

Serialization   

The value of the variable or the parameter is inserted into the XML data at the position of the statement, optionally according to the mapping list behind map. Depending on the type of the variable or parameter, a mapping takes place in accordance with the [asXML format](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xslt_asxml.htm).

Deserialization   

The tt:write statement is ignored in deserializations.

Example

Serializes the start value of a variable.

<tt:transform
  xmlns:tt="http://www.sap.com/transformation-templates">
  <tt:variable name="VARI" val="333" />
  <tt:template>
    <X>
      <tt:write var="VARI"/>
    </X>
  </tt:template>
</tt:transform>

The result of the serialization is:

<X>333</X>